test/sema/instantiate-struct-without-init.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct S {}

void main() {
    // CHECK: [[@LINE+1]]:14: error: 'S' defines no initializers and autogenerated initializers have not been implemented yet
    var s = S()
}
